# Edge-of-Chaos

./: README.md
To Do/: TheNomad.cpp
cmake/: CMakeLists.txt
cmake/logon/: CMakeLists.txt
cmake/scripts/instancescripts/: CMakeLists.txt
cmake/world/: CMakeLists.txt
logon/: AuthSocket.cpp  AuthSocket.h  AutoPatcher.h  LogonConsole.h  Main.cpp
luaengine/: GameobjectFunctions.h  GlobalFunctions.h  LUAEngine.cpp  LuaSqlApi.h  PacketFunctions.h  UnitFunctions.h
shared/: CallBack.cpp  CallBack.h  Common.h  CoreMemoryAllocator.cpp  CrashHandler.h  FastQueue.h  Log.h  MapFileEntry.h  MersenneTwister.cpp  StackTrace.cpp  StackWalker.cpp  TextFile.h  WorldPacket.h  crc32.cpp
shared/Auth/: WowCrypt.cpp  WowCrypt.h
shared/Database/: CreateInterface.cpp  Database.cpp  Database.h  MySQLDatabase.h
shared/Network/: CircularBuffer.h  SocketDefines.h  SocketFreeBSD.cpp  SocketLinux.cpp  (+2 more)
spellhandlers/: DruidSpells.cpp  PriestSpells.cpp
world/: AIInterface.h  AchievementMgr.h  AddonMgr.h  AlteracValley.h  Arenas.cpp  Arenas.h  AuctionHouse.cpp  AuctionHouse.h  AuctionMgr.h  BaseConsole.h  BattlegroundCommands.cpp  BattlegroundHandler.cpp  Channel.cpp  Channel.h  ChannelHandler.cpp  ChannelMgr.h  Chat.cpp  ChatHandler.cpp  CommonScheduleThread.cpp  Container.h  Corpse.h  Creature.h  DatabaseCleaner.cpp  DatabaseCleaner.h  DayWatcherThread.h  DeathKnight.h  Definitions.h  DuelHandler.cpp  DynamicObject.cpp  EventMgr.h  EventableObject.h  GMTicketCommands.cpp  Gossip.h  Group.cpp  Guild.cpp  GuildHandler.cpp  HonorHandler.h  InstanceCommands.cpp  Item.cpp  ItemHandler.cpp  (+68 more)
(+725 files in other folders)
